# typst-to-mathlog

./: .gitignore  Cargo.toml  LICENSE  README.md  dictionary.json  dictionary.txt  dictionary_patch.json  make_dictionary.py  release.py  style.typ  unicode_to_latex.json
.github/workflows/: rust.yml
dictionary/: dictionary.json  dictionary_patch.json  dictionary_unicode.json  make_dictionary.py
example/: example.md  example.typ  mathlog_ex.txt  simple_md.typ
src/: main.rs  utils.rs
src/mathlog/: ast.rs  compose.rs  from_typst.rs  mod.rs
src/mathlog_v2/: ast.rs  compose.rs  dictionary.rs  from_typst.rs  mod.rs
src/typst_/: mod.rs
style/: mathlog_style.typ
