[package]
edition = "2021"
name = "typst-to-mathlog"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecow = "0.1.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
typst = {git = "https://github.com/typst/typst.git"}
unscanny = "0.1"
