[package]
edition = "2021"
name = "typst-to-mathlog"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecow = "0.1.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
svg2pdf = "0.10.0"
typst = "0.11.0"
typst-macros = "0.11.0"
unscanny = "0.1"
